--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-input, textarea {
+input[type="range"], input[type="text"], textarea {
+    width: 100%;
+}
+
+label {
     display: block;
 }
 
@@ -6,4 +10,10 @@ input, textarea {
     display: grid;
     gap: 20px;
     grid-template-columns: 304px 1fr 3fr;
+}
+
+@media screen and (max-width: 850px) {
+    #container {
+        grid-template-columns: auto;
+    }
 }
